fix many style issue on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,8 +9,3 @@
 .h3 {
 	@apply text-xl text-white;
 }
-html {
-	min-height: calc(100% + env(safe-area-inset-top));
-	padding: env(safe-area-inset-top) env(safe-area-inset-right) 0
-		env(safe-area-inset-left);
-}
